--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BP Santa Brígida</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
     <link rel="stylesheet" type="text/css" href="\PWM-TEMPLATES\css\main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
