--- a/pages/store.html
+++ b/pages/store.html
@@ -36,6 +36,16 @@
           </div>
           <div id = "contenedor-productos" class="product-aline">
             <!--Contenido Generado por main.js-->
+            <div class="card product shadow-lg">
+              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <h5 class="card-title">00,00€</h5>
+                <div  class="btn-color">
+                  <a ref="" class="btn">Añadir</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
