--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -34,8 +34,18 @@
           <option value="">Ordenar por: orden5</option>
         </select>
       </div>
-      <div id = "contenedor-productos" class="product-aline">
+      <div id = "contenedor-productos-taller" class="product-aline">
         <!--Contenido Generado por main.js-->
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <div  class="btn-color">
+              <a ref="" class="btn">Añadir</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
