--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
-  <body>
+  <body onload="loadComponenHome()">
     <header class="shadow-lg" id="header"></header>
     <main>
 
@@ -66,13 +66,8 @@
     </main>
 
     <footer id="footer"></footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-    <script>
-      $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
-      $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
-      $(function (){$('#carousel').load("/PWM-TEMPLATES/component/carousel.html")});
-    </script>
+    <script src="/PWM-TEMPLATES/js/main.js"></script>
   </body>
 </html>
