--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
-<body>
+<body onload="loadComponenOther();loadProducts('Catalogo Taller');loadCategory('Catalogo Taller')">
 
 <header class="shadow-lg" id="header"></header>
 
@@ -26,28 +26,17 @@
           <option value="">Marca: xxx</option>
           <option value="">Marca: xxx</option>
         </select>
-        <select class="form-select" aria-label="Default select example">
+        <select class="form-select" aria-label="Default select example" onchange="ordenar(value,1)">
           <option selected>Ordenar por: defecto</option>
-          <option value="">Ordenar por: orden2</option>
-          <option value="">Ordenar por: orden3</option>
-          <option value="">Ordenar por: orden4</option>
-          <option value="">Ordenar por: orden5</option>
+          <option value="1" >Ordenar por: Nombre (A-Z)</option>
+          <option value="2">Ordenar por: Nombre (Z-A)</option>
+          <option value="3">Ordenar por: Precio (Menor a Mayor)</option>
+          <option value="4">Ordenar por: Precio (Mayor a Menor)</option>
         </select>
       </div>
-      <div id = "contenedor-productos-taller" class="product-aline">
+      <div id = "contenedor-productos" class="product-aline">
         <!--Contenido Generado por main.js-->
-        <div class="card product shadow-lg" id="product-template">
-          <div class="img-product">
-            <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
 
@@ -59,11 +48,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-<script>
-  $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
-  $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
-  $(function (){$('#aside').load("/PWM-TEMPLATES/component/aside.html")});
-</script>
 <script src="/PWM-TEMPLATES/js/main.js"></script>
 </body>
 </html>
