--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -14,13 +14,12 @@
       <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
         <h2>Regístrate</h2>
-        <input class="shadow-lg" type="text" placeholder="Nombre completo">
-        <input  class="shadow-lg" type="email" placeholder="Correo electrónico">
-        <input  class="shadow-lg" type="password" placeholder="Contraseña">
-        <input  class="shadow-lg" type="password" placeholder="Repetir Contraseña">
-        <a class="button" href="\PWM-TEMPLATES\pages\dashboard\dashboardAdmin.html">
-          Registrate
-        </a>
+        <input id="nombreCompleto" class="shadow-lg" type="text" placeholder="Nombre completo">
+        <input id="correoElectronico" class="shadow-lg" type="email" placeholder="Correo electrónico">
+        <input id="contrasena"  class="shadow-lg" type="password" placeholder="Contraseña">
+        <input id="repetirContrasena" class="shadow-lg" type="password" placeholder="Repetir Contraseña">
+        <button type="button" class="button" onclick="validarFormulario()">Registrate</button>
+
         <p>Al registrarte, aceptas nuestras Condiciones, la Política de datos y la Política de cookies.</p>
       </form>
       <div  class="register-login-box shadow-lg">
@@ -28,6 +27,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+    <script src="/PWM-TEMPLATES/js/main.js"></script>
   </body>
 </html>
