--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -14,11 +14,9 @@
       <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
         <h2>Inicia Sesion</h2>
-        <input class="shadow-lg"  type="email" placeholder="Correo electrónico">
-        <input class="shadow-lg"  type="password" placeholder="Contraseña">
-          <a class="button" href="\PWM-TEMPLATES\pages\dashboard\dashboardAdmin.html">
-          Iniciar Sesion
-          </a>
+        <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  class="shadow-lg"  type="email" placeholder="Correo electrónico">
+        <input required  minlength="6" maxlength="9" class="shadow-lg"  type="password" placeholder="Contraseña">
+        <button type="submit" value="Submit" class="button" >Iniciar Sesion</button>
         <br>
         <br>
         <a href="#"> ¿Has olvidado la contraseña? </a>
