--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -14,11 +14,11 @@
       <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
         <h2>Regístrate</h2>
-        <input id="nombreCompleto" class="shadow-lg" type="text" placeholder="Nombre completo">
-        <input id="correoElectronico" class="shadow-lg" type="email" placeholder="Correo electrónico">
-        <input id="contrasena"  class="shadow-lg" type="password" placeholder="Contraseña">
-        <input id="repetirContrasena" class="shadow-lg" type="password" placeholder="Repetir Contraseña">
-        <button type="button" class="button" onclick="validarFormulario()">Registrate</button>
+        <input required  id="nombreCompleto" class="shadow-lg" type="text" placeholder="Nombre completo">
+        <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  id="correoElectronico" class="shadow-lg" type="email" placeholder="Correo electrónico">
+        <input required  minlength="6" maxlength="9"  id="contrasena"  class="shadow-lg" type="password" placeholder="Contraseña">
+        <input required  minlength="6" maxlength="9" id="repetirContrasena" class="shadow-lg" type="password" placeholder="Repetir Contraseña">
+        <button type="submit" value="Submit" class="button" >Registrate</button>
 
         <p>Al registrarte, aceptas nuestras Condiciones, la Política de datos y la Política de cookies.</p>
       </form>
