--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="spinner"></div>
     </div>
     <header class="shadow-lg" id="header"></header>
+    <div id="social"></div>
     <main>
 
       <div id="carousel"></div>
