--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -14,7 +14,7 @@
       <div class="spinner"></div>
     </div>
     <header class="shadow-lg" id="header"></header>
-
+     <div id="social"></div>
     <main>
       <div class="whatwedo">
         <h1>¿Qué Hacemos?</h1>
