--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -17,7 +17,7 @@
 
 <main class="main-tienda" >
 
-  <aside id="aside" class="shadow-lg p-3 mb-5 rounded"></aside>
+  <aside id="aside" class="shadow-lg  mb-5 rounded"></aside>
 
   <section class="products">
     <div>
