--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
   </head>
-  <body onload="loadComponenOther()">
+  <body onload="loadComponenOther();loadServices();loadReserveHours()">
     <div id="loading">
       <img id="loading-image" src="/PWM-TEMPLATES/img/LOGO.png" alt="Loading..." />
       <div class="spinner"></div>
@@ -18,132 +18,34 @@
 
     <main class="main-tienda" >
 
-      <aside class="shadow-lg p-3 mb-5 rounded">
-        <p>AQUI VAN LAS CATEGORIAS</p>
-
-        <div class="category">
-          <h4 class="">CATEGORIA 1</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-
-        <div class="category">
-          <h4 class="">CATEGORIA 2</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 3</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 4</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 5</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 6</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
-          </div>
-        </div>
-      </aside>
-
-
-
+      <aside class="shadow-lg p-3 mb-5 rounded" id="serviciosTaller"></aside>
 
       <section class="reserve">
         <h1>Reserva</h1>
         <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+          <div class="dayOfWeek">
+            <h2>Lunes</h2>
+            <p class="date">Fecha: aaaa-mm-dd</p>
+          </div>
 
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
+          <div class="dayOfWeek">
+            <h2>Martes</h2>
+            <p class="date">Fecha: aaaa-mm-dd</p>
           </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
+
+          <div class="dayOfWeek">
+            <h2>Miércoles</h2>
+            <p class="date">Fecha: aaaa-mm-dd</p>
           </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
+
+          <div class="dayOfWeek">
+            <h2>Jueves</h2>
+            <p class="date">Fecha: aaaa-mm-dd</p>
           </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
-          </div>
-          <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
-            <p>HORA: xx:yy</p>
+
+          <div class="dayOfWeek">
+            <h2>Viernes</h2>
+            <p class="date">Fecha: aaaa-mm-dd</p>
           </div>
         </article>
 
