--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -17,18 +17,25 @@
 
 <main class="main-tienda" >
 
-  <aside id="aside" class="shadow-lg  mb-5 rounded"></aside>
+  <aside id="aside" class="shadow-lg  mb-5 rounded">
+    <button onclick="showCategoryMov(0)" type="button" class="btn btn-success">Volver..</button>
+  </aside>
 
   <section class="products">
     <div>
       <h1 class="product-title" >Productos Taller</h1>
+      <div class="aside-mov" >
+        <button onclick="showCategoryMov(1)" type="button" class="btn btn-light shadow-lg">Categorias</button>
+      </div>
       <div class="filters">
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Marca: Todas</option>
-          <option value="">Marca: xxx</option>
-          <option value="">Marca: xxx</option>
-          <option value="">Marca: xxx</option>
-        </select>
+        <form class="d-flex ">
+          <a onclick="buscar()" class="btn btn-success me-1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+            </svg>
+          </a>
+          <input id="query" class="form-control"  placeholder="Buscar.." aria-label="Search">
+        </form>
         <select class="form-select" aria-label="Default select example" onchange="ordenar(value,1)">
           <option selected>Ordenar por: defecto</option>
           <option value="1" >Ordenar por: Nombre (A-Z)</option>
