--- a/pages/dashboard/dashboardAdmin.html
+++ b/pages/dashboard/dashboardAdmin.html
@@ -2,17 +2,18 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
   <link rel="stylesheet" type="text/css" href="\PWM-TEMPLATES\css\main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Panel de Control</title>
 </head>
-<body>
+<body onload="loadComponenEsc()">
 <header class="header-dashboard shadow-sm" id="header"></header>
 <main class="main-tienda" >
 
-  <aside class="aside-dashboard shadow-lg p-3 mb-5 rounded">
-    <div id="aside-color">
+  <aside id="aside" class="aside-dashboard shadow-lg  mb-5 rounded">
+      <button onclick="showCategoryMov(0)" type="button" class="btn btn-success">Volver..</button>
       <div class="aside-user" >
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
           <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -21,57 +22,24 @@
         <h3> Administrador</h3>
       </div>
       <p>Funcionlidades</p>
-      <div class="accordion" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Accordion Item #1
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              Accordion Item #2
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-            <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong>             </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-            <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong>             </div>
-          </div>
-        </div>
-      </div>
 
-    </div>
+
   </aside>
 
 
 
   <section class="products">
+    <div class="aside-mov" >
+      <button onclick="showCategoryMov(1)" type="button" class="btn btn-light shadow-lg">Funciones</button>
+    </div>
     <div class="count-tab">
       <div class="count shadow-lg">
-        <p>Nº USUARIOS</p>
+        <p>Nº XXXX</p>
         <h2>00.00</h2>
       </div>
 
       <div class="count shadow-lg">
-        <p>Nº RESERVAS</p>
+        <p>Nº XXXX</p>
         <h2>00.00</h2>
       </div>
 
@@ -139,9 +107,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-<script>
-  $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
-  $(function (){$('#header').load("/PWM-TEMPLATES/component/headerLog.html")});
-</script>
+<script src="/PWM-TEMPLATES/js/main.js"></script>
 </body>
 </html>
