--- a/index.html
+++ b/index.html
@@ -34,7 +34,44 @@
           </div>
         <img src="https://www.estacionbpsantabrigida.com/uploads/BzH8nN2Q/IMG_20201206_234737.jpg" alt="">
       </div>
+      <div class="bp_card">
+        <div class="description-bp_card">
+          <h1>Premiamos tu fidelidad</h1>
+          <p class="p-justify">Un lugar increíble en el que podrás conseguir las mejores ofertas y regalos. Para hacerlo, sólo tendrás que presentar tu tarjeta Mi BP cada vez que repostes, conseguirás automáticamente un punto por cada litro de carburante.</p>
+          <div class="checks">
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+              </svg>
+              <p>Catalogo</p>
+            </div>
 
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+              </svg>
+              <p>Ahorro</p>
+            </div>
+
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+              </svg>
+              <p>Privilegios</p>
+            </div>
+
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+              </svg>
+              <p>Colaboradores</p>
+            </div>
+          </div>
+          <h2>¡ASÍ DE FÁCIL!</h2>
+
+        </div>
+        <div class="image-bp_card"></div>
+      </div>
       <div class="ubication">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3521.8037833546045!2d-15.501768784579735!3d28.
         030472417823443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc4096cd375e4c51%3A0x49f99925c6d5640d!2sGasolinera
